# Zimiri

./: Cargo.toml  README.md
src/: image_fun.rs  main.rs
