[package]
name = "zimiri"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
rand = "0.8"
serenity = { version = "0.10", features = ["collector"] }
tokio = { version = "1", features = ["full"] }